--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.2",
+    "@vercel/mcp-adapter": "^0.11.1",
     "cookies-next": "^6.0.0",
     "iron-session": "^8.0.4",
     "kiteconnect": "^5.0.1",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^5.5.6",
+    "zod": "^3.25.73"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
